# velocitybrainappprod

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  APPWRITE_SETUP_VERIFICATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  FIXED_FILES_INSTRUCTIONS.md  OAUTH_SETUP_GUIDE.md  QUICK_START_ENHANCED.md  README.md  STARTUP_GUIDE.md  docker-compose.fullstack.yml  docker-compose.prod.yml  docker-compose.yml  identity.spec.json  package-lock.json  package.json  pyproject-client.toml  pyproject.toml  requirements-client.txt  requirements-dev.txt  requirements-optional.txt  requirements-prod.txt  requirements.txt  setup-open-source.py  velocitybrain.py  velocitybrainapp-firebase-adminsdk-fbsvc-af6534886e.json  velocityx.py
.velocitybrain/: adoption_state.json  config.json  core_state.json  last_run.json  reuse_failures.jsonl
backend/: .dockerignore  .env.example  Dockerfile  firebase-service-account.example.json  jest.config.js  package-lock.json  package.json  server.js
dashboard/: .env.development  .env.example  .gitignore  Dockerfile  README.md  firestore.rules  package-lock.json  package.json  tailwind.config.js
data/: response_style_benchmark.json  retrieval_benchmark.json  test-core-state.json
docs/: AGENT_INTEGRATIONS.md  CLIENT_INTEGRATIONS.md  CODEBASE_ANALYSIS.md  ECOSYSTEM_STATUS_AND_OPEN_SOURCE_PLAN.md  ENHANCED_FEATURES.md  LOCAL_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md  REPO_BOUNDARY.csv  UPLOAD_EVIDENCE_GUIDE.md  WORKFLOWS.md
velocitybrain-open-source/: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
velocitybrain-open-source/.github/workflows/: ci.yml
velocitybrain-open-source/docs/: getting-started.md
velocitybrain-open-source/examples/: basic_usage.py  skills_demo.py
velocitybrain-open-source/integrations/claude/: setup.sh
velocitybrain-open-source/integrations/hermes/: config.velocitybrain.yaml
velocitybrain-open-source/integrations/openclaw/: mcpServers.json
velocitybrain-open-source/scripts/: check_public_boundary.py
velocitybrain-open-source/src/cli/: main.py
velocitybrain-open-source/src/client/: __init__.py  client.py  exceptions.py
velocitybrain-open-source/src/mcp/: enhanced_tools.py  server.py
velocitybrain-open-source/src/skills/: base.py  registry.py
velocitybrain-open-source/src/skills/examples/: __init__.py  translate_skill.py
velocitybrain-open-source/src/velocitybrain_client/: __init__.py
velocitybrain-open-source/src/velocitybrain_client/cli/: __init__.py  main.py
velocitybrain-open-source/src/velocitybrain_client/client/: __init__.py  auth.py  client.py  exceptions.py
velocitybrain-open-source/src/velocitybrain_client/mcp/: server.py
velocitybrain-open-source/tests/: test_audit_api.py  test_caveman_compress.py  test_cli_mcp_smoke.py  test_cli_surface.py  test_client.py  test_database_integrity.py  test_eval_query_api.py  test_mcp_surface.py  test_production_security.py  test_public_boundary.py  test_runtime_status_api.py  test_traceability.py
(+326 files in other folders)
