[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocitybrain-client"
version = "1.0.1"
description = "Open-source CLI, SDK, and MCP bridge for the hosted VelocityBrain coding-agent reuse API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{name = "VelocityBrain Team", email = "team@velocitybrain.ai"}]
keywords = ["ai", "agents", "memory", "reuse", "llm", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31.0",
  "mcp>=1.0.0",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
velocitybrain = "velocitybrain_client.cli.main:main"
velocitybrain-mcp = "velocitybrain_client.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["velocitybrain_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
